--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -60,7 +60,7 @@ body{
   overflow: auto;
   position: relative;
   display: inline-block;
-  background-image: image-url("portda.jpg");
+  background-image: image-url("portada2.jpg");
   background-size: 100% 100%;
 }
 
