--- a/app/assets/stylesheets/static_pages.css.scss.erb
+++ b/app/assets/stylesheets/static_pages.css.scss.erb
@@ -60,7 +60,7 @@ body{
   overflow: auto;
   position: relative;
   display: inline-block;
-  background-image: image-url("portada2.png");
+  background-image: image-url(" <%= asset_path('portada2.png') %>");
   background-size: 100% 100%;
 }
 
