--- a/app/assets/stylesheets/static_pages.css.scss.erb
+++ b/app/assets/stylesheets/static_pages.css.scss.erb
@@ -60,7 +60,7 @@ body{
   overflow: auto;
   position: relative;
   display: inline-block;
-  background-image: url("/assets/portada2.png");
+  background-image: image-path("portada2.png");
   background-size: 100% 100%;
 }
 
