--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -18,7 +18,7 @@
           = image_tag "freelance.png", class: "jobs-image"
       .media-body
         %h2.media-heading= link_to "Freelance", "#"
-        %p Like most people at the begining I worked as a normal freelance, going with the wind, low budget, direct contact with the clients. A very hard job but quite interesting because it was the time I learned the most.
+        %p Like most people at the begining I worked as a normal freelance, going with the wind, low budget, direct contact with the clients. A very hard job but quite interesting because it was a time I learned a lot by myself and got the confidence enough to know that I could do big things.
 
     .block-content.media.job
       .media-left
