--- a/app/assets/stylesheets/static_pages.css.scss.erb
+++ b/app/assets/stylesheets/static_pages.css.scss.erb
@@ -8,6 +8,12 @@
   transition: $time linear all;
 }
 
+@font-face {
+  font-family: "Maven Pro Light 200";
+  src: url(/assets/MavenProLight-200.otf) format("truetype");
+}
+
+
 body{
   width: 100vw;
   height: 100vh;
@@ -39,7 +45,7 @@ body{
   .menu-link{
     list-style: none;
     padding: 5px 0;
-    font-family: "Courier New", Courier, monospace;
+    font-family: "Maven Pro Light 200";
     font-weight: bold;
   }
   .menu-link a{
@@ -90,14 +96,14 @@ body{
 }
 
 .block-header{
-  font-family:"Courier New", Courier, monospace;
+  font-family:"Maven Pro Light 200";
   width:100%;
   display:table;
   h1{
     /* RGBa with 0.6 opacity */
-    background: rgba(43,40,40, 0.7);
-    color:white;
-    padding:10px 10px 10px 5%;
+    background: rgba(53, 172, 188, 0.7);
+    color:black;
+    padding:10px 10px 10px 30px;
     display:table-cell;
     margin-top:0;
     font-size:50px;
@@ -106,14 +112,14 @@ body{
 }
 
 .block-content, .vertical-block-content{
-  font-family:"Courier New", Courier, monospace;
+  font-family:"Maven Pro Light 200";
   width:100%;
   height:75%;
   margin:5% 0;
   padding:3%;
-  background: rgba(43,40,40, 0.7);
+  background: rgba(53, 172, 188, 0.7);
   position:relative;
-  color:white;
+  color:black;
   font-size:20px;
 }
 
@@ -138,14 +144,21 @@ body{
     margin-top:10px;
   }
   a{
-    color: white;
+    color: black;
     text-decoration: none;
+    font-weight: bold;
+  }
+  blockquote{
+    border-left:5px solid black;
   }
   blockquote p{
     font-size:27px;
+    color:black;
+    font-weight:bold
   }
   footer{
-    color:white;
+    color:black;
+    font-weight: bold;
   }
 }
 
@@ -203,7 +216,7 @@ body{
 }
 
 .job{
-  .media-heading a{ color: white; text-decoration: none;}
+  .media-heading a{ color: black; text-decoration: none;}
 }
 
 // ----------------------
